<resources>
    <string name="app_name">Maravilla1</string>
    <string name="title_activity_mimapa">Map</string>
    <string name="title_activity_mimapatipos">Map</string>

    <string name="bienvenido">Bienvenido</string>
    <string name="regresar">Regresar</string>

    <string name="tit1">Maravillas Antiguas del Mundo</string>
    <string name="mrvA1">La gran pirámide de Giza</string>
    <string name="mrvA2">Mausoleo de Halicarnaso</string>
    <string name="mrvA3">Estatua de Zeus</string>
    <string name="mrvA4">Jardines Colgantes de Babilonia</string>
    <string name="mrvA5">El Faro de Alejandría</string>
    <string name="mrvA6">Templo de Artemisa</string>
    <string name="mrvA7">Coloso de Rodas</string>


    <string name="tit2">Maravillas Modernas del Mundo</string>
    <string name="mrvB1">La ciudad de Petra, en Jordania</string>
    <string name="mrvB2">El Taj Mahal en India</string>
    <string name="mrvB3">El Machu Picchu en Perú</string>
    <string name="mrvB4">La Pirámide de Chichén Itza</string>
    <string name="mrvB5">El Coliseo de Roma</string>
    <string name="mrvB6">La Gran Muralla de China</string>
    <string name="mrvB7">El Cristo Redentor de Río de Janeiro</string>

    <string name="tit3">Lugares Turísticos de Cusco</string>
    <string name="mrvC1">Machu Picchu</string>
    <string name="mrvC2">Sacsayhuaman</string>
    <string name="mrvC3">Quenco</string>
    <string name="mrvC4">Puca Pucara</string>
    <string name="mrvC5">Tambomachay</string>
    <string name="mrvC6">Pisac</string>
    <string name="mrvC7">Tipon</string>

</resources>