<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".lugares1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/atxtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:text="@string/tit1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/aimg1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="maravillaA1"
                    app:srcCompat="@drawable/mrva1" />

                <TextView
                    android:id="@+id/atxt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:background="#5E000000"
                    android:textColor="#FFF5A1"
                    android:textSize="20dp"
                    android:text="@string/mrvA1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/atxt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:background="#5E000000"
                    android:textColor="#FFF5A1"
                    android:textSize="20dp"
                    android:text="@string/mrvA2" />

                <ImageView
                    android:id="@+id/aimg2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="maravillaA2"
                    app:srcCompat="@drawable/mrva2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/aimg3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="maravillaA3"
                    app:srcCompat="@drawable/mrva3" />

                <TextView
                    android:id="@+id/atxt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:background="#5E000000"
                    android:textColor="#FFF5A1"
                    android:textSize="20dp"
                    android:text="@string/mrvA3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/atxt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:background="#5E000000"
                    android:textColor="#FFF5A1"
                    android:textSize="20dp"
                    android:text="@string/mrvA4" />

                <ImageView
                    android:id="@+id/aimg4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="maravillaA4"
                    app:srcCompat="@drawable/mrva4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/aimg5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="maravillaA5"
                    app:srcCompat="@drawable/mrva5" />

                <TextView
                    android:id="@+id/atxt5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:background="#5E000000"
                    android:textColor="#FFF5A1"
                    android:textSize="20dp"
                    android:text="@string/mrvA5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/atxt6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:background="#5E000000"
                    android:textColor="#FFF5A1"
                    android:textSize="20dp"
                    android:text="@string/mrvA6" />

                <ImageView
                    android:id="@+id/aimg6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="maravillaA6"
                    app:srcCompat="@drawable/mrva6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/aimg7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="maravillaA7"
                    app:srcCompat="@drawable/mrva7" />

                <TextView
                    android:id="@+id/atxt7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:background="#5E000000"
                    android:textColor="#FFF5A1"
                    android:textSize="20dp"
                    android:text="@string/mrvA7" />
            </LinearLayout>

            <Button
                android:id="@+id/abtnRegresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#F0F62A2A"
                android:textColor="#FFF"
                android:onClick="aRegresar"
                android:text="@string/regresar" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>