<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtMar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:background="#A1A11414"
                android:padding="20dp"
                android:gravity="center"
                android:textSize="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/tit1" />

            <ImageView
                android:id="@+id/imrMar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Lugar1"
                app:srcCompat="@drawable/fmar1" />

            <TextView
                android:id="@+id/txtMar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:gravity="center"
                android:textSize="25dp"
                android:background="#AB166719"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/tit2" />

            <ImageView
                android:id="@+id/imgMar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Lugar2"
                app:srcCompat="@drawable/fmar2" />

            <TextView
                android:id="@+id/txtMar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:gravity="center"
                android:textSize="25dp"
                android:background="#CD152998"
                android:padding="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/tit3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Lugar3"
                app:srcCompat="@drawable/fmar3" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>